# ourtex

./: .gitignore  Cargo.toml  README.md
.github/workflows/: fly-deploy.yml  server.yml  web.yml
apps/desktop/: package-lock.json
apps/desktop/src/: AccountSettingsView.tsx  AwaitingApprovalView.tsx  DocumentsTab.tsx  DocumentsView.tsx  Layout.tsx  MembersView.tsx  OrgRail.tsx  OrgSettingsView.tsx  ProposalsView.tsx  RichTextEditor.tsx  SettingsView.tsx  TokensView.tsx  api.ts
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/src/: commands.rs  lib.rs  orgs.rs  proposals.rs  state.rs  workspaces.rs
apps/web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/web/src/: AccountSettingsView.tsx  App.tsx  AuditView.tsx  DocumentsTab.tsx  DocumentsView.tsx  LoginView.tsx  MembersView.tsx  OrgRail.tsx  OrgSettingsView.tsx  ProposalsView.tsx  RichTextEditor.tsx  SettingsView.tsx  TenantPicker.tsx  TokensView.tsx  UnlockView.tsx  api.ts  crypto.ts  docSource.ts  heartbeat.ts  session.ts  styles.css
crates/mytex-crypto/: Cargo.toml
crates/mytex-crypto/src/: aead.rs  content_key.rs  kdf.rs  lib.rs
crates/mytex-server/: Cargo.toml
crates/mytex-server/migrations/: 0002_vault.sql  0003_encryption.sql
crates/mytex-server/src/: audit.rs  auth.rs  crypto_api.rs  documents.rs  error.rs  idx.rs  lib.rs  session_keys.rs  tenants.rs  tokens.rs
crates/mytex-server/tests/: crypto_flow.rs  vault_flow.rs
crates/mytex-sync/: Cargo.toml
crates/mytex-sync/src/: client.rs  driver.rs  lib.rs
crates/orchext-audit/: Cargo.toml
crates/orchext-audit/src/: entry.rs  error.rs  lib.rs  verify.rs  writer.rs
crates/orchext-audit/tests/: audit.rs
crates/orchext-auth/: Cargo.toml
crates/orchext-auth/src/: error.rs  lib.rs  scope.rs  secret.rs  service.rs  token.rs
crates/orchext-auth/tests/: service.rs
crates/orchext-crypto-wasm/: Cargo.toml
crates/orchext-crypto-wasm/src/: lib.rs
crates/orchext-crypto/src/: aead.rs  content_key.rs  error.rs  lib.rs
crates/orchext-index/: Cargo.toml
crates/orchext-index/src/: error.rs  index.rs  lib.rs  query.rs  schema.rs  title.rs
crates/orchext-index/tests/: index.rs
crates/orchext-mcp/: Cargo.toml
crates/orchext-mcp/src/: error.rs  lib.rs  main.rs  ratelimit.rs  resources.rs  rpc.rs  server.rs  title.rs  tools.rs  watch.rs
crates/orchext-mcp/tests/: mcp.rs
crates/orchext-oauth-client/: Cargo.toml
crates/orchext-oauth-client/src/: lib.rs  main.rs
crates/orchext-server/: .env.example  Cargo.toml  Dockerfile  docker-compose.yml
crates/orchext-server/migrations/: 0001_initial.sql  0002_vault.sql  0005_oauth.sql  0006_proposals.sql  0009_org_invitations.sql
crates/orchext-server/src/: accounts.rs  audit.rs  auth.rs  config.rs  cookies.rs  crypto_api.rs  documents.rs  error.rs  idx.rs  lib.rs  main.rs  mcp.rs  oauth.rs  orgs.rs  password.rs  proposals.rs  sessions.rs  tenants.rs  tokens.rs
crates/orchext-server/tests/: auth_flow.rs  crypto_flow.rs  invitations_flow.rs  mcp_flow.rs  oauth_flow.rs  orgs_flow.rs  proposals_flow.rs  teams_flow.rs  vault_flow.rs
crates/orchext-sync/: Cargo.toml
crates/orchext-sync/src/: client.rs  crypto.rs  driver.rs  error.rs  lib.rs  orgs.rs  proposals.rs  session.rs
crates/orchext-vault/: Cargo.toml
crates/orchext-vault/src/: document.rs  driver.rs  error.rs  frontmatter.rs  id.rs  lib.rs  plain_file.rs  visibility.rs
crates/orchext-vault/tests/: plain_file.rs
crates/ourtex-crypto/: Cargo.toml
crates/ourtex-crypto/src/: kdf.rs
deploy/: README.md
deploy/fly/: orchext-prod.toml  orchext-test.toml
deploy/vercel/: README.md
docs/: ARCHITECTURE.md  DEPLOYMENT.md  FORMAT.md  MCP.md  implementation-status.md
docs/phases/: phase-1-core.md  phase-2-plan.md  phase-2b1-server.md  phase-2b2-remote-vault.md  phase-2b3-encryption.md  phase-2b4-web.md  phase-3-plan.md  phase-3-platform.md  phase-3a-rebrand-tasks.md  phase-3b-integrations.md  phase-3c-task-expansion.md  phase-3d-agent-observer.md  phase-3e-orchestration.md  phase-4-installers.md
