[workspace]
resolver = "2"
members = [
    "crates/mytex-vault",
    "crates/mytex-index",
    "crates/mytex-auth",
    "crates/mytex-audit",
    "crates/mytex-mcp",
    "crates/mytex-server",
    "crates/mytex-sync",
    "crates/mytex-crypto",
    "apps/desktop/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.75"
repository = "https://github.com/mytex-app/mytex"

[workspace.dependencies]
tokio = { version = "1", features = ["fs", "rt", "rt-multi-thread", "macros", "io-util", "io-std", "sync", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
thiserror = "1"
async-trait = "0.1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
subtle = "2"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
notify = { version = "6", default-features = false, features = ["macos_fsevent"] }
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio", "query", "matched-path"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
url = { version = "2", features = ["serde"] }
chacha20poly1305 = "0.10"
zeroize = { version = "1", features = ["zeroize_derive"] }

mytex-vault = { path = "crates/mytex-vault", version = "0.1.0" }
mytex-index = { path = "crates/mytex-index", version = "0.1.0" }
mytex-auth = { path = "crates/mytex-auth", version = "0.1.0" }
mytex-audit = { path = "crates/mytex-audit", version = "0.1.0" }
mytex-sync = { path = "crates/mytex-sync", version = "0.1.0" }
mytex-crypto = { path = "crates/mytex-crypto", version = "0.1.0" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
