[package]
name = "mytex-crypto"
description = "Passphrase KDF + AEAD primitives for at-rest encryption"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
