[package]
name = "mytex-sync"
description = "Client-side sync: RemoteVaultDriver + helpers for talking to mytex-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
mytex-vault = { workspace = true }
mytex-crypto = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
