[package]
name = "ourtex-mcp"
description = "Ourtex MCP server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "ourtex-mcp"
path = "src/main.rs"

[dependencies]
ourtex-vault = { workspace = true }
ourtex-index = { workspace = true }
ourtex-auth = { workspace = true }
ourtex-audit = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
notify = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
