[package]
name = "orchext-mcp"
description = "Orchext MCP server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "orchext-mcp"
path = "src/main.rs"

[dependencies]
orchext-vault = { workspace = true }
orchext-index = { workspace = true }
orchext-auth = { workspace = true }
orchext-audit = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
notify = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
