[package]
name = "orchext-oauth-client"
description = "OAuth 2.1 + PKCE client helper for acquiring orchext-server agent tokens"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "orchext-oauth"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["net", "io-util", "rt-multi-thread", "macros", "sync", "time"] }
reqwest = { workspace = true }
url = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
