[package]
name = "ourtex-sync"
description = "Client-side sync: RemoteVaultDriver + helpers for talking to ourtex-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
ourtex-vault = { workspace = true }
ourtex-crypto = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
