[package]
name = "ourtex-crypto"
description = "Passphrase KDF + AEAD primitives for at-rest encryption"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

# Browser builds: activate getrandom's `js` backend so `OsRng` reaches
# `crypto.getRandomValues`. `rand 0.8` pulls `getrandom 0.2` transitively;
# this target-specific dep merges the `js` feature onto the same crate.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
