[package]
name = "mytex-desktop"
description = "Mytex desktop management app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
name = "mytex_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mytex-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mytex-vault = { workspace = true }
mytex-index = { workspace = true }
mytex-auth = { workspace = true }
mytex-audit = { workspace = true }
mytex-sync = { workspace = true }
mytex-crypto = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }

tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
notify = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
tempfile = "3"
